2011-11-21  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*sldb-printer-bindings*): Removed.  Rather useless
	since the change from 2009-02-26.  It could at best have some
	influence on the way conditions are printed.  *sldb-string-length*
	and *sldb-bitvector-length* where both nil so
	*sldb-pprint-dispatch-table* was also not used by default.  In
	summary, spending 3 pages for something that's not used by default
	was pretty silly.  One variable less where we can get the defaults
	wrong.

2011-11-21  Helmut Eller  <heller@common-lisp.net>

	* slime.el (sldb-eval-in-frame): Try to figure the package out.
	Ask Lisp if the function for frame was defined in a particular
	package and use it to read the form.
	(sldb-read-form-for-frame): New helper.

	* swank-backend (frame-package): New.
	* swank-cmucl (frame-package): Implement it.

	* swank.lisp (frame-package-name, eval-in-frame-aux): New.
	(eval-string-in-frame, pprint-eval-string-in-frame): Use package
	argument.

2011-11-19  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (restart-frame): Make it possible to restart
	frames of anonymous functions -- at least some of the time.

2011-11-16  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (open-dedicated-output-stream): Open a stream with
	the right coding system.
	Change (:open-dedicated-output-stream port) message to
	(:open-dedicated-output-stream port coding-system), because Emacs
	can no longer determine the coding system based on the main
	network streams since they are binary now.

2011-11-11  Anton Kovalenko  <anton@sw4me.com>

	* slime.el (slime-ed): add bytep argument to destructure-case.
	When it's true, position is interpreted as byte offset.

2011-11-08  Helmut Eller  <heller@common-lisp.net>

	Restore old header format.

	* swank-rpc.lisp (parse-header, write-header)
	* slime.el (slime-net-decode-length, slime-net-encode-length)

2011-11-06  Helmut Eller  <heller@common-lisp.net>
